fixed alignment issues with the meals appearing after the more button is selected

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -42,3 +42,7 @@
   color: $primary-brand-color;
   text-align: center;
 }
+
+.btn-centered {
+  text-align: center;
+}
