--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -65,24 +65,7 @@ $card-border-radius: 8px;
   margin: 0;
   font-size: 1.2em;
 }
-.card-choice-right {
-  margin-left: auto;
-  position: relative;
-  top: 0%;
-  right: 0%;
 
-  .btn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-right: 0px;
-    padding-top: 50%;
-  }
-  p {
-    
-  }
-}
 
 .meals-show-form {
 
